# lab3

./: CMakeLists.txt  README.md
data/: shakespeare_antony_cleopatra.txt
src/: CMakeLists.txt  shakespeare.cpp  system_logger_child.cpp  system_logger_parent.cpp  wordCount.cpp  wordCount.h  word_count.cpp  word_count.h  word_count_test.cpp
test/: CMakeLists.txt  wordCountTest.cpp
